kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: full-stack-file-vault
 annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: websecure
  traefik.ingress.kubernetes.io/router.tls: "true"
spec:
 ingressClassName: traefik
 tls:
  - hosts: [vault.example.com]
    secretName: full-stack-file-vault-tls
 rules:
  - host: vault.example.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service: { name: full-stack-file-vault-web, port: { name: http } }
